syntax = "proto3";

package departments_provider;
option go_package = "departments_ppu.v1;departments";

service DepartmentsProvider {
  rpc Create(CreateDepartmentRequest) returns (DepartmentResponse);
  rpc Get(GetDepartmentRequest) returns (DepartmentResponse);
  rpc Update(UpdateDepartmentRequest) returns (DepartmentResponse);
  rpc Delete(DeleteDepartmentRequest) returns (DeleteDepartmentResponse);
  rpc List(ListDepartmentsRequest) returns (DepartmentsListResponse);
}

message CreateDepartmentRequest {
  string name = 1;
  string description = 2;
  bool is_active = 3;
}

message GetDepartmentRequest {
  int32 id = 1;
}

message UpdateDepartmentRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
}

message DepartmentResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
  string created_at = 5;
  string updated_at = 6;
}

message DeleteDepartmentRequest {
  int32 id = 1;
}
message DeleteDepartmentResponse {
  bool success = 1;
}

message ListDepartmentsRequest {}
message DepartmentsListResponse {
  repeated DepartmentResponse data = 1;
}